# ipc_bench

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: __init__.py
benchmarks/harness/: Cargo.toml
benchmarks/harness/src/: config.rs  lib.rs  process.rs  report.rs  stats.rs
benchmarks/methods/: __init__.py
benchmarks/methods/native/support/: Cargo.toml
benchmarks/methods/native/support/src/: af_unix.rs  alpc.rs  anon_pipe.rs  copy_roundtrip.rs  lib.rs  mailslot.rs  named_pipe.rs  shared_memory.rs  tcp_loopback.rs  udp_loopback.rs  util.rs
benchmarks/methods/python/: __init__.py  benchmark_adapter.py
results/published/windows11-high-iterations/: af-unix-s1024-native.json  af-unix-s16384-native.json  af-unix-s32704-native.json  af-unix-s4096-native.json  af-unix-s64-native.json  alpc-s1024-native.json  alpc-s16384-native.json  alpc-s32704-native.json  alpc-s4096-native.json  alpc-s64-native.json  anon-pipe-s1024-native.json  anon-pipe-s16384-native.json  anon-pipe-s32704-native.json  anon-pipe-s4096-native.json  anon-pipe-s64-native.json  copy-roundtrip-s1024-native.json  copy-roundtrip-s16384-native.json  copy-roundtrip-s32704-native.json  copy-roundtrip-s4096-native.json  copy-roundtrip-s64-native.json  mailslot-s1024-native.json  mailslot-s16384-native.json  mailslot-s32704-native.json  mailslot-s4096-native.json  mailslot-s64-native.json  manifest.json  metadata.json  named-pipe-byte-sync-s1024-native.json  named-pipe-byte-sync-s16384-native.json  named-pipe-byte-sync-s32704-native.json  named-pipe-byte-sync-s4096-native.json  named-pipe-byte-sync-s64-native.json  (+83 more)
scripts/: run-benchmarks.ps1  run-high-iteration-benchmarks.ps1
(+164 files in other folders)
